--- a/package.json
+++ b/package.json
@@ -1,27 +1,45 @@
 {
-  "name": "rig-x",
-  "version": "0.0.0",
+  "name": "mongoose",
+  "version": "6.7.2",
   "private": true,
   "scripts": {
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "@paypal/checkout-server-sdk": "^1.0.3",
     "bcrypt": "^5.1.0",
     "connect-mongodb-session": "^3.1.1",
     "cookie-parser": "~1.4.4",
+    "crypto": "^1.0.1",
     "debug": "~2.6.9",
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "~4.16.1",
     "express-ejs-layouts": "^2.5.1",
-    "express-fileupload": "^1.4.0",
     "express-session": "^1.17.3",
     "fileupload": "^0.2.1",
     "http-errors": "~1.6.3",
+    "mongodb": "^4.11.0",
     "mongoose": "^6.7.2",
     "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1",
+    "razorpay": "^2.8.3",
     "twilio": "^3.83.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
-  }
+  },
+  "main": "app.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Mahesward/RIG-X-.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Mahesward/RIG-X-/issues"
+  },
+  "homepage": "https://github.com/Mahesward/RIG-X-#readme",
+  "keywords": [],
+  "description": ""
 }
