--- a/package.json
+++ b/package.json
@@ -18,16 +18,17 @@
     "ejs": "^3.1.8",
     "express": "~4.16.1",
     "express-ejs-layouts": "^2.5.1",
+    "express-fileupload": "^1.4.0",
     "express-session": "^1.17.3",
     "fileupload": "^0.2.1",
     "http-errors": "~1.6.3",
     "mongodb": "^4.11.0",
     "mongoose": "^6.7.2",
     "morgan": "~1.9.1",
-    "multer": "^1.4.5-lts.1",
     "pdf-creator-node": "^2.3.5",
     "razorpay": "^2.8.3",
-    "twilio": "^3.83.1"
+    "twilio": "^3.83.1",
+    "voucher-code-generator": "^1.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
